--- a/SynchroWindow.xaml
+++ b/SynchroWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SPNP_P12"
         mc:Ignorable="d"
+        Closed="Window_Closed"
         Title="SynchroWindow" Height="450" Width="800">
     <StackPanel Orientation="Vertical" Background="Yellow">
         <Label Content="Synchro"/>
