--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -16,7 +16,10 @@
                     Content="Багатозадачність" Margin="20 7" Click="TaskButton_Click"/>
         <Button x:Name="CancellingButton"
                     Content="Скасування задач" Margin="20 7" Click="CancellingButton_Click"/>
-        
+        <Button x:Name="ProcessButton"
+                    Content="Процеси" Margin="20 7" Click="ProcessButton_Click"/>
+        <Button x:Name="ChainingButton"
+                    Content="Нитки. Продовження." Margin="20 7" Click="ChainingButton_Click"/>
     </StackPanel>
 
 </Window>
