--- a/ThreadingWindow.xaml
+++ b/ThreadingWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SPNP_P12"
         mc:Ignorable="d"
+        Closed="Window_Closed"
         Title="ThreadingWindow" Height="800" Width="800">
     <StackPanel Orientation="Vertical">
         <Label Content="Багатопоточність" HorizontalAlignment="Center" Margin="10 1 10 1"/>
